--- a/redirect-svc/Cargo.toml
+++ b/redirect-svc/Cargo.toml
@@ -11,3 +11,5 @@ deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
 moka = { version = "0.12.10", features = ["future"] }
 once_cell = "1.21.3"
 tokio = { version = "1.45.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
