--- a/slug-filler/Cargo.toml
+++ b/slug-filler/Cargo.toml
@@ -10,3 +10,5 @@ deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
 once_cell = "1.21.3"
 rand = "0.9.1"
 tokio = { version = "1.45.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
