--- a/write-svc/Cargo.toml
+++ b/write-svc/Cargo.toml
@@ -10,4 +10,6 @@ deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
 deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = { version = "2.5.4", features = ["serde"] }
