--- a/redirect-svc/Cargo.toml
+++ b/redirect-svc/Cargo.toml
@@ -11,5 +11,7 @@ deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
 moka = { version = "0.12.10", features = ["future"] }
 once_cell = "1.21.3"
 tokio = { version = "1.45.0", features = ["full"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.4", features = ["compression-full", "decompression-full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
