--- a/write-svc/Cargo.toml
+++ b/write-svc/Cargo.toml
@@ -10,6 +10,8 @@ deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
 deadpool-redis = { version = "0.20.0", features = ["rt_tokio_1"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.0", features = ["full"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.4", features = ["compression-full", "decompression-full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = { version = "2.5.4", features = ["serde"] }
