--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,6 +47,7 @@ services:
       CACHE_SIZE: "100"
       DATABASE_URL: postgres://min-url-rs:changeme@postgres/min-url-rs
       REDIS_URL: redis://redis:6379
+      SELF_DOMAIN: http://localhost:8080
     depends_on:
       postgres:
         condition: service_healthy
